--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Talkify - Text To Voice Converter</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
 
-<script src="index.js"></script>
+<body>
+
+    <div class="hero">
+        <h1>Talkify - <span>Text To Voice Converter</span></h1>
+        <textarea placeholder="Add Text Here....."></textarea>
+        <div class="row">
+            <select></select>
+            <button>Hear</button>
+        </div>
+    </div>
+
+    <script src="index.js"></script>
 </body>
+
 </html>
